# EBES

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  ablation.py  count_params.py  genindex.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js
.github/workflows/: deploy-docs.yaml
_sources/: index.rst.txt
_sources/get_started/: quick_start.rst.txt
_sources/reference/: ebes.model.PrimeNet.rst.txt  ebes.model.rst.txt  ebes.rst.txt  ebes.utils.rst.txt
_sources/user_guide/: data_format.rst.txt  design.rst.txt
configs/datasets/: age.yaml  arabic.yaml  bpi_17.yaml  electric_devices.yaml  mbd.yaml  mimic3.yaml  pendulum.yaml  pendulum_cls.yaml  physionet2012.yaml  taobao.yaml  x5.yaml
configs/experiments/: correlation.yaml  optuna.yaml  optuna_3cv.yaml  test.yaml
configs/methods/: coles.yaml  convtran.yaml  gru.yaml  mamba.yaml  mlem.yaml  mlp.yaml  mtand.yaml  primenet.yaml  transformer.yaml
docs/: README.md  conf.py
docs/get_started/: install.rst  quick_start.rst
docs/reference/: ebes.data.rst  ebes.losses.rst  ebes.metrics.rst  ebes.model.mamba.rst  ebes.pipeline.rst  ebes.pipeline.runners.rst  modules.rst
docs/user_guide/: configs.rst
ebes/: __init__.py  trainer.py  types.py
ebes/data/: README.md  __init__.py  accessors.py  batch_tfs.py  datasets.py  loading.py  utils.py
ebes/losses/: __init__.py  base.py  contrastive.py  multi_label.py  neural_hawkes.py
ebes/metrics/: __init__.py  custom.py  neural_hawkes.py
ebes/model/: __init__.py  agg.py  basemodel.py  mtand.py  preprocess.py  seq2seq.py  utils.py
ebes/pipeline/: __init__.py  base_runner.py  utils.py
ebes/utils/: __init__.py  general.py  reproduce.py
get_started/: install.html  quick_start.html
notebooks/: collect_results.ipynb
notebooks/eda/: age.ipynb  mimic-3.ipynb  (+4 more)
preprocess/: SpokenArabicDigits.py  age.py  bpi_17.py  common.py  electric_devices.py  mbd.py  mimic-3.py  pendulum.py  physionet2012.py  taobao.py  x5-retail.py
reference/: ebes.data.html  ebes.html  ebes.losses.html  ebes.metrics.html  ebes.model.PrimeNet.html  ebes.model.html  ebes.model.mamba.html  ebes.pipeline.html  ebes.pipeline.runners.html  ebes.utils.html  modules.html
user_guide/: configs.html  data_format.html  design.html
(+205 files in other folders)
